test/cases/error/unbound-variable.cba
-- @expect-error: Unbound variable: x
return x
